--- a/librararyforfileprovdider/src/main/AndroidManifest.xml
+++ b/librararyforfileprovdider/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application>
         <provider
-            android:name="android.support.v4.content.FileProvider"
+            android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.android7.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
