--- a/librararyforfileprovdider/build.gradle
+++ b/librararyforfileprovdider/build.gradle
@@ -16,8 +16,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    provided 'androidx.appcompat:appcompat:1.0.0'
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    compileOnly 'androidx.appcompat:appcompat:1.1.0'
 }
 
 //添加
