--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
-        classpath 'com.novoda:bintray-release:0.9.2'
+        //classpath 'com.novoda:bintray-release:0.9.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,9 +19,11 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
+        mavenLocal()
         jcenter()
-        maven { url "https://jitpack.io" }
         google()
+
     }
 }
 
